@@ -1,9 +1,6 @@
 /* This string is written to the output primary header as CAL_VER. */
-
-
-#define ACS_CAL_VER "8.3.3 (27-Jul-2015)"
-#define ACS_CAL_VER_NUM "8.3.3"
-
+#define ACS_CAL_VER "8.3.4 (07-Jul-2016)"
+#define ACS_CAL_VER_NUM "8.3.4"
 
 /* name and version number of the CTE correction algorithm */
 #define ACS_CTE_NAME "PixelCTE 2012"
